add the homepage route

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-app",
+  "name": "multi-step-form",
+  "homepage": "https://johnmwendwa.github.io/multi-step-form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
